--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <h5>Questions? Email us at <a href="mailto:hayley.susan.hartman@gmail.com">email@gmail.com</a></h5>
                 </div>
                 <div class="col-lg-6 borderLineL sectionTitle">
-                    <h5>copyright &copy; flower child retro</h5>
+                    <h5>copyright &copy; hayley hartman</h5>
 
                 </div>
             </div>
